# yukicup_2023_autumn

./: pyproject.toml
eda/: eda.ipynb  make_neigbor_feat.ipynb  overlapping_id.ipynb
sample_code/: sample_baseline_catboost_pandas.ipynb  sample_baseline_lgbm_pandas.ipynb  sample_baseline_lgbm_polars.ipynb
yukicup_2023_autumn/: e000_baseline.ipynb  e001_add_calssifiy_kenzoubutu_bikou.ipynb  e002_kenzoubutu_genre.ipynb  e003_change_shoyusha_label.ipynb  e004_add_era.ipynb  e005_add_feat.ipynb  e006_add_shoyusya_genre.ipynb  e007_add_shozaichi.ipynb  e008_add_kinse_izen_kindai.ipynb  e009_era_improve.ipynb  e010_add_ido_keido_block.ipynb  e011_del_only_train.ipynb  e012_split_model.ipynb  e013_add_address_feat_prefecture_city.ipynb  e014_add_neighbor_feat.ipynb  e015_hyper_param.ipynb  e016_limit_max_depth.ipynb  e017_tmp.ipynb  e018_add_space_first.ipynb  e019_use_yuki_baseline copy.ipynb  e020_add_feat.ipynb  e021_add_count_encoding.ipynb  e022_add_count_encoding_use_only_main_feat.ipynb  e022_add_count_encoding_use_only_main_feat_add_feat_frac.ipynb  e023_seed_ave.ipynb  e024_use_catboost.ipynb  e025_late_use_catboost_increase_max_depth.ipynb  e02X_use_catboost.ipynb
