[tool.poetry]
name = "yukicup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
polars = "^0.18.9"
ipykernel = "^6.25.0"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
pyarrow = "^12.0.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
japanize-matplotlib = "^1.1.3"
matplotlib-venn = "^0.11.9"
tqdm = "^4.65.0"
black = "^23.11.0"
japanese-address = "^0.2"
catboost = "^1.2.2"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
